syntax = "proto3";

package enroll_to_product;

message CheckClassRequest {
  int64 class_id = 1;
};

message CheckCourseRequest {
  int64 course_id = 1;
  int32 group_number = 2;
};

message CheckResponse {
  int32 people_limit = 1;
};

message CheckCourseResponse {
  repeated CheckCourseResponseEntry people_limits = 1;
};

message CheckCourseResponseEntry {
  int64 class_id = 1;
  int32 people_limit = 2;
}

message ClassIdsRequest {
  repeated int64 class_ids = 1;
};

message ClassDetails {
  int64 class_id = 1;
  string name = 2;
  string description = 3;
  string start_date = 4;
  string end_date = 5;
  string class_room_name = 6;
  optional string dance_category_name = 7;
  optional string advancement_level_name = 8;
  float price = 9;
}

message ClassesDetailsResponse {
  repeated ClassDetails classesDetails = 1;
}

message CourseIdsRequest {
  repeated int64 course_ids = 1;
}

message CourseDetailsResponse {
  int64 course_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  optional string dance_category_name = 5;
  optional string advancement_level_name = 6;
  string course_status = 7;
}

message CoursesDetailsResponse {
  repeated CourseDetailsResponse courses_details = 1;
}